# skim

./: .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  Justfile  README.md  mise.toml  mkdocs.yml  pyproject.toml  skim-config.yaml  statusbar-wezterm-requirements.md  test-keymap.vil  versions.json  zj-status-prompt.md
.github/workflows/: docs.yml  prerelease.yml  publish.yml  release.yml
0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.7/api/: index.html
0.7/api/application/: index.html
0.7/api/data/: index.html
0.7/api/domain/: index.html
0.7/api/ui/: index.html
0.7/changelog/: index.html
0.7/configuration/: index.html
0.7/configuration/cli-options/: index.html
0.7/configuration/config-file/: index.html
0.7/configuration/configurator-ui/: index.html
0.7/getting-started/: index.html
0.7/introduction/: index.html
0.7/search/: search_index.json
0.7/stylesheets/: extra.css
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/_overrides/: main.html
dev/api/: index.html
dev/api/application/: index.html
dev/api/data/: index.html
dev/api/domain/: index.html
dev/api/ui/: index.html
dev/changelog/: index.html
dev/configuration/: index.html
dev/configuration/cli-options/: index.html
dev/configuration/config-file/: index.html
dev/configuration/configurator-ui/: index.html
dev/getting-started/: index.html
dev/introduction/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
docs/: conf.py  configuration.rst  getting-started.md  getting-started.rst  index.md  index.rst  introduction.md  introduction.rst
docs/_static/: custom.css
docs/api/: application.md  application.rst  data.md  data.rst  domain.md  domain.rst  index.md  index.rst  ui.md  ui.rst
docs/configuration/: cli-options.md  config-file.md  configurator-ui.md  index.md
docs/source/: conf.py  introduction.rst
docs/source/api/: index.rst
docs/superpowers/plans/: 2026-04-21-config-tui.md  2026-04-21-layer-indicator-circles.md  2026-04-22-non-sequential-layer-indices.md  2026-04-23-contextual-help.md  2026-04-23-show-layer-connectors.md  2026-04-26-connector-routing-phase-2.md
docs/superpowers/specs/: 2026-04-21-config-tui-design.md  2026-04-21-layer-indicator-circles-design.md  2026-04-22-non-sequential-layer-indices-design.md  2026-04-23-contextual-help-design.md  2026-04-23-show-layer-connectors-design.md  2026-04-26-overview-connector-routing-phase-2-design.md
openspec/: project.md
openspec/specs/cli/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/image-generation/: spec.md
openspec/specs/keycode-mapping/: spec.md
openspec/specs/keymap-parsing/: spec.md
samples/config/: SvalCOLEMAK-config.yaml  SvalQWERTY-config.yaml  skim-config.yaml
samples/keymaps/: SvalQWERTY_LH10key_RHNAV.vil  c2json-sample.json  keybard-sample.kbi  vial-sample.vil
scripts/: option_images.py  release_changelog.py  release_version.py  screenshots.py  setup-hooks.sh  spacing_mocks.py  update_coverage.py  validate_version.py
scripts/hooks/: post-commit  pre-commit  reference-transaction
src/skim/: __init__.py  __main__.py  cli.py
src/skim/application/: __init__.py  config_generator.py  doctor.py  image_generator.py  keycode_loader.py  keycode_transformer.py  keymap_generator.py  (+1 more)
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_chromium_exporter.py  test_generate_command.py  test_image_exporter.py  test_overview_connectors.py
tests/snapshot/: __init__.py  conftest.py  test_renders.py
tests/unit/: __init__.py  test_assets.py  test_cli.py
(+242 files in other folders)
