[project]
name = "qmk-skim"
version = "0.5.1.dev"
description = "Svalboard Keymap Image Maker"
readme = "README.md"
authors = [
    { name = "Thiago Alves", email = "thiago@rapinialves.com" }
]
keywords = ["svalboard", "keyboard", "keymap", "layout", "image", "svg", "png", "typst"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "drawsvg>=2.4.1",
    "fonttools>=4.61.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "textual-autocomplete>=4.0.6",
    "webcolors>=25.10.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.57.0",
    "pillow-avif-plugin>=1.5.5",
]
cairo = [
    "cairocffi>=1.7.0",
    "cairosvg>=2.7.0",
]
tui = [
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.22.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
docs = [
    "furo>=2024.0.0",
    "myst-parser>=3.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx>=8.1.3",
]

[project.scripts]
skim = "skim:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=skim --cov-report=html:out/coverage --cov-report=term-missing --doctest-modules"
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: mark test as integration test (requires Playwright browsers)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 80

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["skim"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".git", "build", "dist"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true

[build-system]
requires = ["uv_build>=0.9.22,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "skim"
